Copying Files and Directories

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -31,7 +31,7 @@ A Dockerfile contains instructions for building an image
 - CMD
 - ENTRYPOINT
 
-### Choosing the Right Base Image
+## Choosing the Right Base Image
 
 **FROM** is used to specify the base image it can be an OS or an OS plus a runtime environment.
 for example if you're a python developer you start with **Python** image or **Node** image for Javascript developer.
@@ -42,7 +42,7 @@ Don't blindly choose images always do your research
 
 there might be different builds for the base image based on the OS and CPU architecture, you don't need to worry about it since **docker** toke care of that nad when you pull an image it automatically chooses the right one.
 
-#### Searching for a Base image
+### Searching for a Base image
 
 1. Go to DockerHub and search for the base image like "node" and "python"
 2. Click on the official image
@@ -116,3 +116,69 @@ v23.3.0
 ```
 
 but we don't have our application files! yet.
+
+## Copying Files and Directories
+
+Now that we have a base image we need to copy our application files into the image, so for that we have `COPY` and `ADD` they have the same syntax but `ADD` has a couple more features.
+
+`COPY` with this we can copy one or more files/directories from current directory into the image. wa can't copy files/directories from outside current directory (where the Dockerfile is located).
+
+that is because in `docker build -t react-app .` command we used `.` (current directory), when we run this command **docker client** sends the contents of **current directory** to **docker engine** which is called `build context`, so **docker client** sends **build context** to **docker engine** and then **docker engine** start executing commands inside **Dockerfile** one by one, this way docker engine does't have access to the files/directories outside this directory.
+
+```Dockerfile
+FROM node:23.3.0-alpine3.20
+# -------------------------- about source -------------------------
+# Copy files or folders from source to the dest path in the image's filesystem.
+# COPY source dest
+
+# copying package.json into /app directory in image's filesystem, will be created if doesn't exist
+COPY package.json /app
+
+# When using COPY with more than one source file, the destination must be a directory and end with a / or a \
+COPY package.json README.md /app/
+
+# Or use a pattern
+COPY package*.json /app
+
+# Copy all files and directories from source to dest
+COPY . /app
+# ------------------------------ about destination ----------------------
+
+# here we use absolute path "/app" for the destination
+COPY . /app
+
+# we can only use relative path when the "WORKDIR" is set
+# when you set WORKDIR all the instruction coming after this will be executed inside this working directory
+WORKDIR /app
+# copy all files/directories from current working directory into "/app" working directory
+COPY . .
+
+Note: if the file name has space like (hello world.txt) we should use this syntax ["","",""]
+where each string represents an argument of COPY command, `COPY ["hello world.txt", "."]`
+
+COPY ["hello world.txt", "."]
+```
+
+we also have ADD command
+
+```Dockerfile
+FROM node:23.3.0-alpine3.20
+WORKDIR /app
+# add a file from a URL, if you have access to it
+ADD http://.../file.txt .
+
+# the other feature is that you can add a compress file and ADD will extracted it
+ADD file.zip .
+```
+
+**Note**: It's best to use **COPY** command over **ADD** unless you need to add a file from a URL or add a compressed file.
+
+Now run
+
+```bash
+PS D:\Courses\Docker\docker-learning\react-app> docker run -it react-app sh
+/app # ls
+Dockerfile         eslint.config.js   node_modules       package.json       src
+README.md          index.html         package-lock.json  public             vite.config.js
+/app #
+```
