ignore files/directories in docker

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -182,3 +182,16 @@ Dockerfile         eslint.config.js   node_modules       package.json       src
 README.md          index.html         package-lock.json  public             vite.config.js
 /app #
 ```
+
+## Excluding Files and Directories
+
+When building docker images there are files that doesn't need to be included in the built image, mostly because it can be easily generated in any machine and to speed up our build and deployment process. meet `.dockerignore` file containing all the files and directories to be excluded, it should be in the root directory of your project just like `.gitignore` file.
+
+```dockerignore
+node_modules
+```
+
+now that we have `.dockerignore` file excluding `node_modules` run `docker build -t react-app .` to build our image without `node_modules` (the size is significantly reduced).
+
+now we need to run `docker run -it react-app sh` and then in the shell session run `npm install` to install all the dependencies, since we excluded the `.dockerignore` file.
+
