--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -195,3 +195,43 @@ now that we have `.dockerignore` file excluding `node_modules` run `docker build
 
 now we need to run `docker run -it react-app sh` and then in the shell session run `npm install` to install all the dependencies, since we excluded the `.dockerignore` file.
 
+## Running Commands
+
+Now to install our dependencies we should include `RUN` command in our Dockerfile
+
+```dockerfile
+FROM node:23.3.0-alpine3.20
+WORKDIR /app
+COPY . .
+RUN npm install
+
+```
+
+basically wit `RUN` command we can run any command we could in `terminal`,
+
+```dockerfile
+FROM node:23.3.0-alpine3.20
+WORKDIR /app
+COPY . .
+RUN npm install
+RUN apt install python -> in case you need to install another package
+
+```
+
+**Note**: alpine distro doesn't have `apt` instead it has `apk` and here is a few commands:
+
+```bash
+apk add python3 -> install python version 3
+apk update -> to update the installer resources if the installer package is not available
+apk add python3 -> run again to install
+python3 --version -> check if the package installed successfully
+```
+
+but for our react-app project this is the Dockerfile
+
+```dockerfile
+FROM node:23.3.0-alpine3.20
+WORKDIR /app
+COPY . .
+RUN npm install
+```
