setting env in docker

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -235,3 +235,44 @@ WORKDIR /app
 COPY . .
 RUN npm install
 ```
+
+## Setting Environment Variables
+
+Quite often we need to define environment variables in our app and you can do so with `ENV`
+command in Dockerfile.
+
+```dockerfile
+FROM node:23.3.0-alpine3.20
+WORKDIR /app
+COPY . .
+RUN npm install
+# new syntax
+ENV API_URL=http://api/myapp.com
+# old syntax
+ENV API_URL http://api/myapp.com
+
+```
+
+**Note**: use the new syntax for defining environment variables to be clear.
+
+now run `docker build -t react-app .` to build our app again
+
+```bash
+PS D:\Courses\Docker\docker-learning\react-app> docker run -it react-app sh
+/app # printenv
+NODE_VERSION=23.3.0
+HOSTNAME=fdfe17510384
+YARN_VERSION=1.22.22
+SHLVL=2
+HOME=/root
+TERM=xterm
+PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+PWD=/app
+API_URL=http://api/myapp.com
+/app # printenv API_URL
+http://api/myapp.com
+/app # echo $API_URL
+http://api/myapp.com
+```
+
+and as above our environment variable is set for us.
