--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -276,3 +276,23 @@ http://api/myapp.com
 ```
 
 and as above our environment variable is set for us.
+
+## Exposing Ports
+
+when we run our `react-app` as usual we get `http://localhost:3000`, 3000 port is open to the host (our windows PC) but when we run this app's docker image that port will be open to the container not to the host, basically we can't view the output as usual.
+
+this behavior is useful when we have multiple containers running the same image.
+
+In this situation we need to `EXPOSE` the `3000` port from our container to the host. but this port is not going to be mapped to the host automatically, we need to map it.
+
+first we need to add `EXPOSE` to our dockerfile, to tell what port this container will be listening on.
+
+```dockerfile
+FROM node:23.3.0-alpine3.20
+WORKDIR /app
+COPY . .
+RUN npm install
+ENV API_URL=http://api/myapp.com
+EXPOSE 3000
+```
+`EXPOSE` command doesn't publish the port on the host, is just a form of documentation that tells us which port this container will eventually be listening on.
