setting the user

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -296,3 +296,21 @@ ENV API_URL=http://api/myapp.com
 EXPOSE 3000
 ```
 `EXPOSE` command doesn't publish the port on the host, is just a form of documentation that tells us which port this container will eventually be listening on.
+
+## Setting the User
+
+By default Docker runs our applications on the root user with the most privileges, this can open up security holes in our system, to prevent this we need to create a normal user with limited privileges.
+
+create a system user (system users have limited privileges and used for running background precesses), and a group for that user.
+
+```dockerfile
+RUN ddgroup -S app && adduser -S -G app app
+``` 
+
+then to switch the user use 
+
+```dockerfile
+USER app 
+```
+
+all the following commands will be executed using this user.
