permission error and entry points

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -279,11 +279,11 @@ and as above our environment variable is set for us.
 
 ## Exposing Ports
 
-when we run our `react-app` as usual we get `http://localhost:3000`, 3000 port is open to the host (our windows PC) but when we run this app's docker image that port will be open to the container not to the host, basically we can't view the output as usual.
+when we run our `react-app` as usual we get `http://localhost:5173`, 5173 port is open to the host (our windows PC) but when we run this app's docker image that port will be open to the container not to the host, basically we can't view the output as usual.
 
 this behavior is useful when we have multiple containers running the same image.
 
-In this situation we need to `EXPOSE` the `3000` port from our container to the host. but this port is not going to be mapped to the host automatically, we need to map it.
+In this situation we need to `EXPOSE` the `5173` port from our container to the host. but this port is not going to be mapped to the host automatically, we need to map it.
 
 first we need to add `EXPOSE` to our dockerfile, to tell what port this container will be listening on.
 
@@ -293,8 +293,9 @@ WORKDIR /app
 COPY . .
 RUN npm install
 ENV API_URL=http://api/myapp.com
-EXPOSE 3000
+EXPOSE 5173
 ```
+
 `EXPOSE` command doesn't publish the port on the host, is just a form of documentation that tells us which port this container will eventually be listening on.
 
 ## Setting the User
@@ -305,12 +306,160 @@ create a system user (system users have limited privileges and used for running 
 
 ```dockerfile
 RUN ddgroup -S app && adduser -S -G app app
-``` 
+```
 
-then to switch the user use 
+then to switch the user use
 
 ```dockerfile
-USER app 
+USER app
 ```
 
 all the following commands will be executed using this user.
+
+## Defining Entrypoints
+
+Issue with `permission error`
+
+The issue is likely due to the order of commands and how file permissions are handled when the `USER appuser` command is used early in the `Dockerfile`. Here's a breakdown of why your instructor's solution might work in some cases but not in others (like yours).
+
+---
+
+### **Why This Happens**
+
+1. **When `USER appuser` Is Defined Early**:
+
+   - The `WORKDIR /app` command creates the `/app` directory **owned by `appuser`** because the `USER appuser` is already active at that point.
+   - However, the `COPY . .` command copies files into `/app`, and the default behavior assigns them to `root`, leaving `appuser` without write permissions.
+
+2. **Why It Worked for Your Instructor**:
+
+   - If their setup ensures the `COPY` step does not overwrite permissions (e.g., because of build cache or host system configuration), the issue might not occur.
+   - Alternatively, their `npm install` step might not require creating or modifying files (e.g., if they skipped the `package-lock.json` update due to caching).
+
+3. **Why It Fails for You**:
+   - In your case, the `COPY . .` step assigns files to `root`, and `appuser` cannot write to them, causing the `npm install` step to fail.
+
+---
+
+### **The Fix**
+
+To ensure consistent behavior, explicitly adjust permissions **after copying the files**. Here's the corrected `Dockerfile`:
+
+```dockerfile
+FROM node:23.3.0-alpine3.20
+
+# Create non-root user and group
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+# Switch to the non-root user
+USER appuser
+
+# Set the working directory (created as appuser)
+WORKDIR /app
+
+# Switch back to root temporarily for the next steps
+USER root
+
+# Copy project files and fix permissions
+COPY . .
+RUN chown -R appuser:appgroup /app
+
+# Switch back to non-root user
+USER appuser
+
+# Install dependencies
+RUN npm install
+
+# Set environment variables
+ENV API_URL=http://api/myapp.com
+
+# Expose the app port
+EXPOSE 3000
+
+# Start the application
+CMD ["npm", "start"]
+```
+
+---
+
+### **Why This Works**
+
+1. **Permissions Are Adjusted After `COPY`**:
+
+   - The `RUN chown -R appuser:appgroup /app` command ensures all files and directories in `/app` are owned by `appuser`.
+
+2. **Explicit User Switching**:
+   - Switching to `USER root` ensures the `COPY` command and `chown` have sufficient permissions.
+   - Switching back to `USER appuser` ensures the app runs securely as a non-root user.
+
+---
+
+### **Best Practices**
+
+- Always verify file permissions when copying files into the container.
+- Use the `USER` command strategically to avoid unnecessary permission issues.
+
+---
+
+### **Troubleshooting Tips**
+
+1. **Inspect Permissions in the Built Image**:
+   Run a shell in the built container to check file ownership:
+
+   ```bash
+   docker run -it --rm <image_name> sh
+   ls -l /app
+   ```
+
+2. **Rebuild Without Cache**:
+   If caching causes inconsistent behavior, rebuild the image without using cached layers:
+
+   ```bash
+   docker build --no-cache -t react-app .
+   ```
+
+---
+
+for now we need to run `docker run react-app npm run dev` in the terminal every time we run our app, which is not ideal and here is the `CMD` command (COMMAND) to run commands in the terminal.
+
+```dockerfile
+
+CMD npm start
+# or
+CMD npm run dev
+```
+
+**Note**: the `CMD` instruction is just to supply the default command, it doesn't make sense to have multiple `CMD` instructions in the dockerfile, even if you supply multiple `CMD` commands only the last one will take effect!
+
+### CMD vs RUN
+
+`RUN` is a build-time instruction, executed at the time of building the image.
+
+`CMD` is a run-time instruction, so it is executed when starting a container.
+
+`CMD` instruction has two forms:
+
+```dockerfile
+# shell form
+CMD npm start
+
+# Execute form
+CMD ["npm", "start"]
+```
+
+if you use `shell-form` that command will be executed in a separate shell, but with the `exec-form` we can execute the commands without spinning up another shell session.
+
+here is `ENTRYPOINT` instruction which works similar to `CMD` instruction this this difference that you can't override it, if you need to do so use `--entrypoint` flag.
+
+```dockerfile
+ENTRYPOINT [ "npm", "run", "dev" ]
+```
+
+```bash
+
+
+```
+
+`ENTRYPOINT` is used when you know for sure that is the command to be executed whenever we start a container. with the `CMD` instruction we have a bit of flexibility that we can override it without providing any additional flags.
+
+which one to use! it's just the matter of personal preference.
