speed up the build process

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -40,7 +40,7 @@ Don't blindly choose images always do your research
 
 **Note**: `FROM node:latest` do not use **latest** tag, once you're done with your project there might be another new version for the base image and that has the potential to cause problems than good.
 
-there might be different builds for the base image based on the OS and CPU architecture, you don't need to worry about it since **docker** toke care of that nad when you pull an image it automatically chooses the right one.
+there might be different builds for the base image based on the OS and CPU architecture, you don't need to worry about it since **docker** takes care of that and when you pull an image it automatically chooses the right one.
 
 ### Searching for a Base image
 
@@ -167,7 +167,7 @@ WORKDIR /app
 # add a file from a URL, if you have access to it
 ADD http://.../file.txt .
 
-# the other feature is that you can add a compress file and ADD will extracted it
+# the other feature is that you can add a compressed file and ADD will extracted it
 ADD file.zip .
 ```
 
@@ -305,7 +305,7 @@ By default Docker runs our applications on the root user with the most privilege
 create a system user (system users have limited privileges and used for running background precesses), and a group for that user.
 
 ```dockerfile
-RUN ddgroup -S app && adduser -S -G app app
+RUN addgroup -S app && adduser -S -G app app
 ```
 
 then to switch the user use
@@ -463,3 +463,112 @@ ENTRYPOINT [ "npm", "run", "dev" ]
 `ENTRYPOINT` is used when you know for sure that is the command to be executed whenever we start a container. with the `CMD` instruction we have a bit of flexibility that we can override it without providing any additional flags.
 
 which one to use! it's just the matter of personal preference.
+
+## Speeding Up Builds
+
+### Layers in Docker
+
+In Docker, **layers** are an essential concept that form the foundation of how Docker images are built, stored, and shared. Here's an explanation of what layers are and how they work:
+
+---
+
+### **What are Layers in Docker?**
+
+A **layer** is a component of a Docker image. Each layer represents a set of changes made to the file system, such as adding, modifying, or deleting files.
+
+- When you create a Docker image using a `Dockerfile`, each instruction in the `Dockerfile` creates a new layer.
+- Layers are **stacked** on top of each other to form the final image.
+
+---
+
+### **Key Features of Docker Layers**
+
+1. **Immutable**  
+   Once a layer is created, it cannot be modified. If you make changes, a new layer is created.
+
+2. **Reusability**  
+   Docker reuses unchanged layers across builds. If you modify only the topmost instruction in your `Dockerfile`, Docker reuses the previous layers, speeding up the build process.
+
+3. **Layer Caching**  
+   Docker caches layers locally, allowing it to skip rebuilding steps that haven’t changed. This is why the order of instructions in your `Dockerfile` affects build performance.
+
+4. **Shared Between Images**  
+   Layers are stored in a shared storage system on your Docker host. If multiple images use the same base image or identical instructions, they share those layers, saving space.
+
+---
+
+### **How Layers Work in a Dockerfile**
+
+Each instruction in a `Dockerfile` (e.g., `FROM`, `RUN`, `COPY`) creates a layer.
+
+**Example `Dockerfile`:**
+
+```dockerfile
+# First Layer: Base image
+FROM node:18
+
+# Second Layer: Set working directory
+WORKDIR /app
+
+# Third Layer: Copy package files and install dependencies
+COPY package.json package-lock.json ./
+RUN npm install
+
+# Fourth Layer: Copy application source code
+COPY . .
+
+# Fifth Layer: Expose port and start application
+EXPOSE 3000
+CMD ["npm", "start"]
+```
+
+For this Dockerfile:
+
+1. **Layer 1:** The `node:18` base image is pulled and forms the first layer.
+2. **Layer 2:** The working directory is set to `/app`.
+3. **Layer 3:** Dependencies are installed.
+4. **Layer 4:** Application source code is copied.
+5. **Layer 5:** The container is configured to expose port `3000` and run `npm start`.
+
+---
+
+### **Caching and Layers**
+
+When building an image, Docker checks if a layer can be reused from cache by comparing:
+
+1. The **instruction** in the `Dockerfile`.
+2. The **contents of the files** used by that instruction.
+
+**Example of Cache Use:**
+
+- If `COPY package.json .` hasn't changed, the cached layer with installed dependencies (`RUN npm install`) is reused.
+- If you modify `package.json`, the cache for that layer and subsequent layers is invalidated.
+
+---
+
+### **Final Image**
+
+The final Docker image is a combination of all the layers. During container runtime:
+
+- Layers are **read-only**.
+- A **writable layer** is added on top of the image for runtime modifications. This writable layer is not persisted when the container stops.
+
+---
+
+### **Benefits of Layered Architecture**
+
+1. **Efficiency:**
+
+   - Shared layers reduce disk usage and build time.
+   - Layers can be reused across multiple images.
+
+2. **Modularity:**
+
+   - You can build images in stages and share common layers between images.
+
+3. **Speed:**
+   - Caching makes subsequent builds significantly faster.
+
+---
+
+![docker instructions order](dockerInstructionsOrder.png)
