Removing Images and Containers

--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -572,3 +572,113 @@ The final Docker image is a combination of all the layers. During container runt
 ---
 
 ![docker instructions order](dockerInstructionsOrder.png)
+
+## Removing Images and Containers
+
+Removing Docker images and containers is a common maintenance task to free up disk space and keep your Docker environment clean. Here’s an explanation:
+
+---
+
+### **1. Removing Docker Containers**
+
+A Docker container is a running or stopped instance of an image. To remove a container:
+
+#### **View All Containers**
+
+Use this command to list all containers:
+
+```bash
+docker ps -a
+```
+
+#### **Remove a Specific Container**
+
+Use the container's ID or name:
+
+```bash
+docker rm <container_id_or_name>
+```
+
+#### **Remove All Stopped Containers**
+
+You can quickly remove all containers that are not running:
+
+```bash
+docker container prune
+```
+
+- You’ll be prompted for confirmation.
+
+---
+
+### **2. Removing Docker Images**
+
+A Docker image is the blueprint used to create containers. To remove unused or outdated images:
+
+#### **View All Images**
+
+List all images:
+
+```bash
+docker images
+```
+
+#### **Remove a Specific Image**
+
+Use the image's ID or repository name and tag:
+
+```bash
+docker rmi <image_id_or_name>
+```
+
+#### **Remove Dangling Images**
+
+Dangling images are untagged images (intermediate layers) that are no longer referenced by any container:
+
+```bash
+docker image prune
+```
+
+- You’ll be prompted for confirmation.
+
+#### **Remove All Unused Images**
+
+This removes all images not associated with a container:
+
+```bash
+docker image prune -a
+```
+
+- Use this with caution to avoid deleting images you might need.
+
+---
+
+### **3. Combining Commands**
+
+#### **Remove Containers and Images Together**
+
+You can use `docker system prune` to remove all unused containers, images, networks, and caches:
+
+```bash
+docker system prune
+```
+
+#### **Remove Everything (For Cleanup)**
+
+To remove unused items, including volumes (which aren’t removed by default), use:
+
+```bash
+docker system prune -a --volumes
+```
+
+---
+
+### **Things to Note**
+
+1. **Dependency Restrictions**:
+   - You cannot remove an image if containers are using it. Stop and remove the container first.
+2. **Careful Pruning**:
+   - Pruning commands can remove data you may want to keep, so use them thoughtfully.
+3. **Saved Space**:
+   - Running `docker system df` shows how much space is used by images, containers, and volumes.
+
