--- a/3.BuildingImages.md
+++ b/3.BuildingImages.md
@@ -682,3 +682,171 @@ docker system prune -a --volumes
 3. **Saved Space**:
    - Running `docker system df` shows how much space is used by images, containers, and volumes.
 
+## Tagging Images
+
+Tagging in Docker is a way to manage and identify different versions of Docker images. Tags provide a human-readable label that corresponds to a specific image, helping developers and system administrators organize and differentiate between various builds, versions, or configurations of an image.
+
+### **1. What is a Docker Tag?**
+
+- A Docker tag is an alias attached to an image that points to a specific image ID (a SHA-256 hash).
+- Tags are primarily used to version and categorize images.
+
+For example:
+
+```bash
+myapp:1.0.0
+```
+
+In this example:
+
+- `myapp` is the name of the image.
+- `1.0.0` is the tag.
+
+If no tag is specified, Docker defaults to the `latest` tag:
+
+```bash
+myapp:latest
+```
+
+### **2. How Tags Work**
+
+Each tag is essentially a pointer to a specific image layer or set of layers. Even if two tags are different, they can refer to the same image. This allows you to assign multiple tags to one image or reuse tags to point to updated versions.
+
+### **3. Why is Tagging Important?**
+
+- **Version Control**: Tags let you specify and track image versions (e.g., `1.0.0`, `1.0.1`).
+- **Environment-Specific Images**: You can tag images for different environments (e.g., `dev`, `staging`, `prod`).
+- **Easy Collaboration**: Tags make it easier for teams to know which image to use.
+- **Continuous Delivery Pipelines**: Tags like `latest`, `stable`, or specific commit hashes help automate CI/CD workflows.
+
+---
+
+### **4. Tagging an Image**
+
+You can tag an image explicitly during the build process or re-tag an existing image.
+
+#### **4.1 Tagging During Build**
+
+When you build an image, you can assign it a tag using the `-t` flag:
+
+```bash
+docker build -t myapp:1.0.0 .
+```
+
+This command:
+
+- Builds the Dockerfile in the current directory (`.`).
+- Assigns the tag `myapp:1.0.0` to the resulting image.
+
+#### **4.2 Tagging an Existing Image**
+
+To add or change a tag for an existing image, use the `docker tag` command:
+
+```bash
+docker tag <source-image> <target-image>
+```
+
+For example:
+
+```bash
+docker tag myapp:1.0.0 myapp:latest
+```
+
+This creates a new `latest` tag pointing to the same image as `1.0.0`.
+
+---
+
+### **5. Pushing Tagged Images to a Registry**
+
+Tags play a significant role when pushing images to a Docker registry like Docker Hub, AWS ECR, or a private registry.
+
+#### **5.1 Push an Image with a Specific Tag**
+
+```bash
+docker push username/myapp:1.0.0
+```
+
+- `username/myapp` is the repository name.
+- `1.0.0` is the tag.
+
+#### **5.2 Push the Default Tag (`latest`)**
+
+If no tag is specified, Docker pushes the `latest` tag:
+
+```bash
+docker push username/myapp
+```
+
+---
+
+### **6. Listing Tags**
+
+Docker does not have a direct command to list all tags for an image. However, you can check the tags for a repository on a Docker registry using the registry's web interface or APIs.
+
+---
+
+### **7. Tagging Strategies**
+
+#### **7.1 Semantic Versioning**
+
+Use semantic versioning to indicate changes:
+
+- `1.0.0` (major release with breaking changes)
+- `1.0.1` (minor update with no breaking changes)
+- `1.1.0` (new feature without breaking changes)
+
+#### **7.2 Environment Tags**
+
+Tag images based on their environment:
+
+- `myapp:dev`
+- `myapp:staging`
+- `myapp:prod`
+
+#### **7.3 CI/CD Tags**
+
+Use tags that align with your CI/CD pipeline:
+
+- Commit SHA: `myapp:abc1234`
+- Build number: `myapp:build-42`
+
+#### **7.4 Rolling Tags**
+
+Update tags like `latest` or `stable` to point to newer versions, but maintain version-specific tags like `1.0.0` for rollback purposes.
+
+---
+
+### **8. Removing Tags**
+
+Tags are just aliases; deleting a tag does not delete the underlying image. To remove a tag:
+
+```bash
+docker rmi <image:tag>
+```
+
+For example:
+
+```bash
+docker rmi myapp:1.0.0
+```
+
+If no other tags point to the image, the image will also be removed.
+
+---
+
+### **9. Best Practices**
+
+1. **Avoid Using `latest` in Production**: The `latest` tag is mutable and can point to different images over time, leading to unpredictability.
+2. **Use Immutable Tags**: Always use specific version numbers for production deployments.
+3. **Document Your Tagging Strategy**: Clearly define and communicate your team's tagging strategy.
+4. **Automate Tagging**: Integrate tagging into your CI/CD pipeline to ensure consistency.
+
+---
+
+### **10. Visualizing Tags**
+
+Think of tags as sticky notes attached to a file. You can attach multiple sticky notes (tags) to one file (image), and removing a sticky note doesn't delete the file unless no other sticky notes remain.
+
+---
+
+Let me know if you'd like more examples or details!
